// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDTS > should exclude specified keys 1`] = `
"interface AutoGenerateImportMetaEnv {
  // Auto generated by vite-plugin-env-parse. ‼️ DO NOT MODIFY THIS FILE ‼️
  /**
   * The title of the application
   */
  readonly VITE_APP_TITLE: string
}"
`;

exports[`generateDTS > should generate correct TypeScript interface 1`] = `
"interface AutoGenerateImportMetaEnv {
  // Auto generated by vite-plugin-env-parse. ‼️ DO NOT MODIFY THIS FILE ‼️
  /**
   * The title of the application
   */
  readonly VITE_APP_TITLE: string
  /**
   * The base URL for the API
   */
  readonly VITE_API_URL: string
  /**
   * Enable or disable a feature
   */
  readonly VITE_ENABLE_FEATURE: boolean
  /**
   * Maximum number of retries for requests
   */
  readonly VITE_MAX_RETRIES: number
  /**
   * Timeout duration in milliseconds
   */
  readonly VITE_TIMEOUT: number
  /**
   * An array of numbers
   */
  readonly VITE_ARRAY: any[]
  /**
   * An object with key-value pairs
   */
  readonly VITE_OBJECT: Record<string, any>
}"
`;

exports[`generateDTS > should handle empty commentRecord 1`] = `
"interface AutoGenerateImportMetaEnv {
  // Auto generated by vite-plugin-env-parse. ‼️ DO NOT MODIFY THIS FILE ‼️
  readonly VITE_APP_TITLE: string
  readonly VITE_API_URL: string
}"
`;
